backend: added connection to the django backend and some styling modifications

--- a/src/app/job-board/job-board.component.html
+++ b/src/app/job-board/job-board.component.html
@@ -1,16 +1,19 @@
 <div class="job-board">
   <h1>Job Board</h1>
   <hr>
-  <div class="job-post" *ngFor="let job of jobs">
+  <div class="job-post" *ngFor="let job of jobs" (click)="goToJobDetails(job.id)" [routerLink]=[job.id]>
     <div class="job-header">
       <h2>{{ job.title }}</h2>
-      <h3>{{ job.company }}</h3>
-      <span>{{ job.location }}</span>
+      <div>
+        <h3>{{ job.company }}</h3>
+        <span>{{ job.location }}</span>
+      </div>
     </div>
     <div class="job-body">
       <p>{{ job.description }}</p>
       <p><strong>Requirements:</strong> {{ job.requirements }}</p>
       <p><strong>Salary:</strong> {{ job.salary }}</p>
     </div>
+    <div class="job-image" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Woman_1.jpg/800px-Woman_1.jpg)"></div>
   </div>
 </div>
