--- a/src/app/job-board/job-board.component.css
+++ b/src/app/job-board/job-board.component.css
@@ -25,6 +25,24 @@
   margin-bottom: 2rem;
   border-radius: 1rem;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  position: relative;
+}
+
+.job-image {
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+
+.job-post:hover {
+  cursor: pointer;
+  transform: scale(1.05);
 }
 
 .job-header {
@@ -40,7 +58,7 @@
   margin-bottom: 0;
 }
 
-.job-header h3 {
+.job-header div h3 {
   font-size: 1rem;
   margin-bottom: 0;
 }
