--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -20,9 +20,8 @@
   <div class="recruiter-info">
     <div>
       <h2>Recruiter Information</h2>
-      <p><strong>Name:</strong> {{job?.recruiter?.name}}</p>
+      <p><strong>Name:</strong> {{job?.recruiter?.first_name}} {{job?.recruiter?.last_name}}</p>
       <p><strong>Email:</strong> {{job?.recruiter?.email}}</p>
-      <p><strong>Phone:</strong> {{job?.recruiter?.phone}}</p>
     </div>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Woman_1.jpg/800px-Woman_1.jpg" alt="" />
   </div>  
