--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,5 +13,5 @@
       <button type="submit" class="btn btn-primary">Login</button>
     </div>
   </form>
-  Don't have an account? <button (click)="getSignUp()">Sign up</button>
+  Don't have an account? <button class="auth-toggle" (click)="getSignUp()">Sign up</button>
 </div>
