--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -29,5 +29,5 @@
       <button type="submit" class="btn btn-primary">Register</button>
     </div>
   </form>
-  Already a user? <button (click)="getLogin()">Login</button>
+  Already a user? <button class="auth-toggle" (click)="getLogin()">Login</button>
 </div>
