feat: added form and interface to apply to job but just need to add the http request to connect to backend

--- a/src/app/job-board/job-board.component.html
+++ b/src/app/job-board/job-board.component.html
@@ -1,6 +1,7 @@
 <div class="job-board">
   <h1>Job Board</h1>
   <hr>
+  <h3 *ngIf="!jobs.length">No jobs yet! Start posting.</h3>
   <div class="job-post" *ngFor="let job of jobs" (click)="goToJobDetails(job.id.toString())" [routerLink]=[job.id]>
     <div class="job-header">
       <h2>{{ job.title }}</h2>
