--- a/src/app/job-board/job-board.component.html
+++ b/src/app/job-board/job-board.component.html
@@ -15,6 +15,6 @@
       <p><strong>Requirements:</strong> {{ job.requirements }}</p>
       <p><strong>Salary:</strong> {{ job.salary }}</p>
     </div>
-    <div class="job-image" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Woman_1.jpg/800px-Woman_1.jpg)"></div>
+    <div class="job-image" style="background-image: url(https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png)"></div>
   </div>
 </div>
