feat: added dashboard tracking all projects created by or applied by a given user

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,17 @@
 <div class="about-container">
-  <h1>About Springboard Juniors</h1>
-  <hr>
-  <img src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" />
-  <p class="about-text">Welcome to the best job board for getting hired quickly. The only job board dedicated to junior roles! Our platform allows employers to post job openings for junior positions in the tech industry. We help junior job seekers find their dream job by providing a centralized hub for junior job listings.</p>
-  <p class="about-text">In addition to job postings, we also offer a unique feature for employers to post technical questions for job seekers to answer. This allows employers to better assess the technical skills of job candidates and find the right talent effectively.</p>
+  <div class="about-springboard-container">
+    <h1>About Springboard Juniors</h1>
+    <hr>
+    <img src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" />
+    <p class="about-text">Welcome to the best job board for getting hired quickly. The only job board dedicated to junior roles! Our platform allows employers to post job openings for junior positions in the tech industry. We help junior job seekers find their dream job by providing a centralized hub for junior job listings.</p>
+    <p class="about-text">In addition to job postings, we also offer a unique feature for employers to post technical questions for job seekers to answer. This allows employers to better assess the technical skills of job candidates and find the right talent effectively.</p>
+  </div>
+  <div class="about-me-container">
+    <h1>The Developer</h1>
+    <hr>
+
+    <img src="../../assets/images/profile_photo.png" alt="" />
+    <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida urna non magna auctor, non tincidunt enim tristique. Suspendisse potenti. Aliquam tincidunt orci nec magna ultrices malesuada. Etiam semper elementum felis, vitae sodales quam aliquet sed.</p>
+  </div>
 </div>
+
