--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <mat-toolbar color="primary" class="mat-elevation-z2">
     <a mat-button routerLink="/"><img class="logo" src="assets/images/logo2.png" alt="logo"/></a>
     <span class="fill"></span>
-    <p *ngIf="user">Hi, {{user?.first_name}} {{user?.last_name}}</p>
     <a mat-button routerLink="/about">About</a>
     <a mat-button routerLink="/contact">Contact</a>
     <a mat-button *ngIf="user" routerLink="/new">Post Job</a>
+    <a mat-button *ngIf="user" routerLink="/dashboard">Dashboard</a>
     <a mat-button *ngIf="user" (click)="handleLogout()">Log Out</a>
     <a mat-button *ngIf="!user" routerLink="/register">Register</a>
   </mat-toolbar>  
