--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,10 +1,19 @@
 .about-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-springboard-container,
+.about-me-container {
   max-width: 800px;
   margin: 2rem auto;
   padding: 20px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   background-color: #fff;
   border-radius: 10px;
+}
+
+.about-springboard-container {
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .about-text {
@@ -14,6 +23,14 @@
   text-align: justify;
 }
 
-.about-container img {
+.about-springboard-container img {
+  width: 100%;
+}
+
+.about-me-container {
+  width: 44.25rem;
+}
+
+.about-me-container img {
   width: 100%;
 }
