--- a/src/app/create-job/create-job.component.html
+++ b/src/app/create-job/create-job.component.html
@@ -1,4 +1,5 @@
-<div class="create-job-form">
+<div class="create-job-container">
+  <div class="create-job-form">
     <h1>Create Job</h1>
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
@@ -32,4 +33,10 @@
       <button type="submit" class="btn btn-primary">Create Job</button>
     </form>
   </div>
+  <div class="info-container">
+    <h1>Are you a recruiter or employer?</h1>
+    <img src="https://images.pexels.com/photos/7988218/pexels-photo-7988218.jpeg" alt="" />
+    <p class="about-text">It is important that Springboard maintains a space for up-and-coming developers/engineers. Create job postings that target juniors to help propel them into the industry.</p>
+  </div>
+</div>
   
