--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,12 @@
 .about-container {
   display: flex;
   flex-wrap: wrap;
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 .about-springboard-container,
@@ -19,7 +25,7 @@
 .about-text {
   font-size: 1.2rem;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin: 20px auto;
   text-align: justify;
 }
 
