--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,13 +5,14 @@
     <img src="https://images.pexels.com/photos/3861958/pexels-photo-3861958.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" />
     <p class="about-text">Welcome to the best job board for getting hired quickly. The only job board dedicated to junior roles! Our platform allows employers to post job openings for junior positions in the tech industry. We help junior job seekers find their dream job by providing a centralized hub for junior job listings.</p>
     <p class="about-text">In addition to job postings, we also offer a unique feature for employers to post technical questions for job seekers to answer. This allows employers to better assess the technical skills of job candidates and find the right talent effectively.</p>
+    <p class="about-text">Posting technicals will allow the employer to choose the candidate that best meets their needs.</p>
   </div>
   <div class="about-me-container">
     <h1>The Developer</h1>
     <hr>
 
     <img src="../../assets/images/profile_photo.png" alt="" />
-    <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida urna non magna auctor, non tincidunt enim tristique. Suspendisse potenti. Aliquam tincidunt orci nec magna ultrices malesuada. Etiam semper elementum felis, vitae sodales quam aliquet sed.</p>
+    <p class="about-text">Martin Nicola is a passionate backend developer with an interest in building REST APIs. He loves creating functional solutions to meet the needs of his clients.</p>
   </div>
 </div>
 
