--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,15 @@
-.mat-toolbar {
-  background-color: #424242;
+.navbar-container {
+  background-color: #dadada;
   box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
-}
-
-.fill {
-  flex: 1 1 auto;
 }
 
 .logo {
   width: 6rem;
+  filter: invert(1);
+  vertical-align: baseline;
 }
 
 .container >.mat-toolbar > p {
   font-size: 15px;
 }
+
