--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,39 @@
-<div class="container">
-  <mat-toolbar color="primary" class="mat-elevation-z2">
-    <a mat-button routerLink="/"><img class="logo" src="assets/images/logo2.png" alt="logo"/></a>
-    <span class="fill"></span>
-    <a mat-button routerLink="/about">About</a>
-    <a mat-button routerLink="/contact">Contact</a>
-    <a mat-button *ngIf="user" routerLink="/new">Post Job</a>
-    <a mat-button *ngIf="user" routerLink="/dashboard">Dashboard</a>
-    <a mat-button *ngIf="user" (click)="handleLogout()">Log Out</a>
-    <a mat-button *ngIf="!user" routerLink="/register">Register</a>
-  </mat-toolbar>  
-</div>
+<nav class="navbar-container navbar navbar-expand-lg">
+  <div class="container-fluid">
+    <a mat-button class="navbar-brand" routerLink="/">
+      <img class="logo" src="assets/images/logo2.png" alt="logo" />
+    </a>
+    <div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a mat-button class="nav-link active" aria-current="page" routerLink="/">Jobs</a>
+          </li>
+          <li class="nav-item">
+            <a mat-button class="nav-link" routerLink="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a mat-button class="nav-link" routerLink="/contact">Contact</a>
+          </li>
+          <li *ngIf="user" class="nav-item">
+            <a mat-button class="nav-link" routerLink="/new">Create Job</a>
+          </li>
+          <li *ngIf="user" class="nav-item">
+            <a mat-button class="nav-link" routerLink="/dashboard">Dashboard</a>
+          </li>
+          <li *ngIf="user" class="nav-item">
+            <a mat-button class="nav-link" (click)="handleLogout()">Log Out</a>
+          </li>
+          <li *ngIf="!user" class="nav-item">
+            <a mat-button class="nav-link" routerLink="/register">Register</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
