--- a/src/app/create-job/create-job.component.css
+++ b/src/app/create-job/create-job.component.css
@@ -1,6 +1,12 @@
 .create-job-container {
   display: flex;
   flex-wrap: wrap;
+  animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 .info-container {
