--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+html, body { 
+  height: 100%; 
+}
+
+body { 
+  margin: 0; 
+  font-family: 'Raleway', sans-serif;
+}
+
 
 
 .auth-toggle {
